cmake_minimum_required(VERSION 3.22)

project(gapbs LANGUAGES CXX)

add_executable(pr src/pr.cc)
target_compile_options(pr PRIVATE "-ggdb3" "-O0")

add_executable(bfs src/bfs.cc)
target_compile_options(bfs PRIVATE "-ggdb3" "-O0")

add_library(ipref ChampSim/prefetcher/no_instr/no.cc)
target_compile_options(ipref PRIVATE "-ggdb3" "-O0")
target_include_directories(ipref PRIVATE ChampSim/inc)
target_compile_definitions(ipref PRIVATE -Dprefetcher_initialize=pref_pprefetcherDno_instr_initialize -Dprefetcher_branch_operate=pref_pprefetcherDno_instr_branch_operate -Dprefetcher_cache_operate=pref_pprefetcherDno_instr_cache_operate -Dprefetcher_cycle_operate=pref_pprefetcherDno_instr_cycle_operate -Dprefetcher_cache_fill=pref_pprefetcherDno_instr_cache_fill -Dprefetcher_final_stats=pref_pprefetcherDno_instr_final_stats -Dl1i_prefetcher_initialize=pref_pprefetcherDno_instr_initialize -Dl1i_prefetcher_branch_operate=pref_pprefetcherDno_instr_branch_operate -Dl1i_prefetcher_cache_operate=pref_pprefetcherDno_instr_cache_operate -Dl1i_prefetcher_cycle_operate=pref_pprefetcherDno_instr_cycle_operate -Dl1i_prefetcher_cache_fill=pref_pprefetcherDno_instr_cache_fill -Dl1i_prefetcher_final_stats=pref_pprefetcherDno_instr_final_stats)

add_library(pref_no ChampSim/prefetcher/no/no.cc)
target_compile_options(pref_no PRIVATE "-ggdb3" "-O0")
target_include_directories(pref_no PRIVATE ChampSim/inc)
target_compile_definitions(pref_no PRIVATE -Dprefetcher_initialize=pref_pprefetcherDno_initialize -Dprefetcher_cache_operate=pref_pprefetcherDno_cache_operate -Dprefetcher_cache_fill=pref_pprefetcherDno_cache_fill -Dprefetcher_cycle_operate=pref_pprefetcherDno_cycle_operate -Dprefetcher_final_stats=pref_pprefetcherDno_final_stats -Dl1d_prefetcher_initialize=pref_pprefetcherDno_initialize -Dl1d_prefetcher_operate=pref_pprefetcherDno_cache_operate -Dl1d_prefetcher_cache_fill=pref_pprefetcherDno_cache_fill -Dl1d_prefetcher_final_stats=pref_pprefetcherDno_final_stats)

add_library(pref_erebus ChampSim/prefetcher/erebus/erebus.cc)
target_compile_options(pref_erebus PRIVATE "-ggdb3" "-O0")
target_include_directories(pref_erebus PRIVATE ChampSim/inc)
target_compile_definitions(pref_erebus PRIVATE -Dprefetcher_initialize=pref_pprefetcherDerebus_initialize -Dprefetcher_cache_operate=pref_pprefetcherDerebus_cache_operate -Dprefetcher_cache_fill=pref_pprefetcherDerebus_cache_fill -Dprefetcher_cycle_operate=pref_pprefetcherDerebus_cycle_operate -Dprefetcher_final_stats=pref_pprefetcherDerebus_final_stats -Dl1d_prefetcher_initialize=pref_pprefetcherDerebus_initialize -Dl1d_prefetcher_operate=pref_pprefetcherDerebus_cache_operate -Dl1d_prefetcher_cache_fill=pref_pprefetcherDerebus_cache_fill -Dl1d_prefetcher_final_stats=pref_pprefetcherDerebus_final_stats)

add_executable(naive_bfs src/naive_bfs.cc src/champsim_adapter.cc ChampSim/src/dram_controller.cc ChampSim/src/ptw.cc ChampSim/src/core_inst.cc ChampSim/src/cache.cc ChampSim/src/ooo_cpu.cc ChampSim/src/vmem.cc ChampSim/replacement/lru/lru.cc ChampSim/branch/bimodal/bimodal.cc ChampSim/btb/basic_btb/basic_btb.cc)
target_link_libraries(naive_bfs PRIVATE ipref pref_erebus pref_no)
target_compile_options(naive_bfs PRIVATE "-ggdb3" "-O0")
target_include_directories(naive_bfs PRIVATE ChampSim/inc)
target_compile_definitions(naive_bfs PRIVATE -Dinitialize_replacement=repl_rreplacementDlru_initialize -Dfind_victim=repl_rreplacementDlru_victim -Dupdate_replacement_state=repl_rreplacementDlru_update -Dreplacement_final_stats=repl_rreplacementDlru_final_stats -Dinitialize_branch_predictor=bpred_bbranchDbimodal_initialize -Dlast_branch_result=bpred_bbranchDbimodal_last_result -Dpredict_branch=bpred_bbranchDbimodal_predict -Dinitialize_btb=btb_bbtbDbasic_btb_initialize -Dupdate_btb=btb_bbtbDbasic_btb_update -Dbtb_prediction=btb_bbtbDbasic_btb_predict)
